<resources>
    <string name="app_name">Calculater</string>
    <string name="default_text">Калькулятор</string>
    <string name="key_dot">.</string>
    <string name="key_0">0</string>
    <string name="key_9">9</string>
    <string name="key_8">8</string>
    <string name="key_7">7</string>
    <string name="key_6">6</string>
    <string name="key_5">5</string>
    <string name="key_4">4</string>
    <string name="key_3">3</string>
    <string name="key_2">2</string>
    <string name="key_1">1</string>
    <string name="screen"></string>
    <string name="key_mult">*</string>
    <string name="key_minus">-</string>
    <string name="key_plus">+</string>
    <string name="key_eq">=</string>
    <string name="key_div">/</string>
    <string name="key_clear">C</string>
    <string name="key_clearAll">CE</string>
    <string name="key_empty1" />
    <string name="screen_empty">0</string>
    <string name="background_image">background_image</string>
    <string name="resultFormat">%.3f</string>
    <string name="tv_text">0</string>
    <string name="key_theme">T</string>
</resources>