<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintVertical_chainStyle="packed"
    tools:context=".MainActivity">

    <ImageView
        style="@style/calcIVBlack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/resultTextView"
        style="@style/calcTVBlack"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_height"
        android:layout_marginHorizontal="@dimen/tv_margin"
        android:layout_marginTop="@dimen/tv_margin"
        android:fontFamily="@font/lucida_calc"
        android:padding="@dimen/tv_padding"
        app:layout_constraintBottom_toTopOf="@id/key_div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="50"
        tools:text="@string/tv_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_CE"
        style="@style/calcKeysMaterialBlack.C_CE"
        android:text="@string/key_clearAll"
        app:layout_constraintBottom_toBottomOf="@id/key_C"
        app:layout_constraintEnd_toStartOf="@id/key_C"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/resultTextView"
        app:layout_constraintTop_toTopOf="@id/key_C"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_C"
        style="@style/calcKeysMaterialBlack.C_CE"
        android:text="@string/key_clear"
        app:layout_constraintBottom_toBottomOf="@id/key_div"
        app:layout_constraintEnd_toStartOf="@id/key_div"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_CE"
        app:layout_constraintTop_toTopOf="@id/key_div"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        style="@style/calcKeysMaterialBlack.digits"
        android:text="@string/key_1"
        app:layout_constraintBottom_toBottomOf="@id/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/resultTextView"
        app:layout_constraintTop_toTopOf="@id/key_2"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        style="@style/calcKeysMaterialBlack.digits"
        android:text="@string/key_2"
        app:layout_constraintBottom_toBottomOf="@id/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintTop_toTopOf="@id/key_3"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        style="@style/calcKeysMaterialBlack.digits"
        android:text="@string/key_3"
        app:layout_constraintBottom_toBottomOf="@id/key_sum"
        app:layout_constraintEnd_toStartOf="@id/key_sum"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintTop_toTopOf="@id/key_sum"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_div"
        style="@style/calcKeysMaterialBlack.actions"
        android:text="@string/key_div"
        app:layout_constraintBottom_toTopOf="@id/key_multi"
        app:layout_constraintEnd_toEndOf="@id/key_multi"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/key_multi"
        app:layout_constraintTop_toBottomOf="@id/resultTextView"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        style="@style/calcKeysMaterialBlack.digits"
        android:text="@string/key_4"
        app:layout_constraintBottom_toBottomOf="@id/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/resultTextView"
        app:layout_constraintTop_toTopOf="@id/key_5"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        style="@style/calcKeysMaterialBlack.digits"
        android:text="@string/key_5"
        app:layout_constraintBottom_toBottomOf="@id/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toTopOf="@id/key_6"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_6"
        style="@style/calcKeysMaterialBlack.digits"
        android:text="@string/key_6"
        app:layout_constraintBottom_toBottomOf="@id/key_dec"
        app:layout_constraintEnd_toStartOf="@id/key_dec"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toTopOf="@id/key_dec"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_multi"
        style="@style/calcKeysMaterialBlack.actions"
        android:text="@string/key_mult"
        app:layout_constraintBottom_toTopOf="@id/key_dec"
        app:layout_constraintEnd_toEndOf="@id/key_dec"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/key_dec"
        app:layout_constraintTop_toBottomOf="@id/key_div"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        style="@style/calcKeysMaterialBlack.digits"
        android:text="@string/key_7"
        app:layout_constraintBottom_toBottomOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/resultTextView"
        app:layout_constraintTop_toTopOf="@id/key_8"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        style="@style/calcKeysMaterialBlack.digits"
        android:text="@string/key_8"
        app:layout_constraintBottom_toBottomOf="@id/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toTopOf="@id/key_9"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        style="@style/calcKeysMaterialBlack.digits"
        android:text="@string/key_9"
        app:layout_constraintBottom_toBottomOf="@id/key_multi"
        app:layout_constraintEnd_toStartOf="@id/key_multi"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toTopOf="@id/key_multi"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dec"
        style="@style/calcKeysMaterialBlack.actions"
        android:text="@string/key_minus"
        app:layout_constraintBottom_toTopOf="@id/key_sum"
        app:layout_constraintEnd_toEndOf="@id/key_sum"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/key_sum"
        app:layout_constraintTop_toBottomOf="@id/key_multi"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_sum"
        style="@style/calcKeysMaterialBlack.actions"
        android:text="@string/key_plus"
        app:layout_constraintBottom_toTopOf="@id/key_result"
        app:layout_constraintEnd_toEndOf="@id/key_result"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/key_result"
        app:layout_constraintTop_toBottomOf="@id/key_dec"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        style="@style/calcKeysMaterialBlack.digits"
        android:text="@string/key_0"
        app:layout_constraintBottom_toBottomOf="@id/key_result"
        app:layout_constraintEnd_toStartOf="@id/key_dot"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_theme"
        app:layout_constraintTop_toTopOf="@id/key_result"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        style="@style/calcKeysMaterialBlack.digits"
        android:text="@string/key_dot"
        app:layout_constraintBottom_toBottomOf="@id/key_result"
        app:layout_constraintEnd_toStartOf="@id/key_result"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_0"
        app:layout_constraintTop_toTopOf="@id/key_result"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_result"
        style="@style/calcKeysMaterialBlack.Result"
        android:layout_marginBottom="@dimen/keys_margin"
        android:text="@string/key_eq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/resultTextView"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_dot"
        app:layout_constraintTop_toBottomOf="@id/key_sum"
        app:layout_constraintVertical_weight="10" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_theme"
        style="@style/calcKeysMaterial.Result"
        android:layout_marginBottom="@dimen/keys_margin"
        android:backgroundTint="@color/black"
        android:text="@string/key_theme"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/resultTextView"
        app:layout_constraintTop_toTopOf="@id/key_0"
        app:layout_constraintVertical_weight="10" />

</androidx.constraintlayout.widget.ConstraintLayout>