<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintVertical_chainStyle="packed"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/background_img" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@color/colorDarkBackground"
        android:fontFamily="@font/lucida_calc"
        android:padding="@dimen/padding_10dp"
        android:shadowColor="@color/colorShadowWhite"
        android:shadowDx="@integer/shadowDY"
        android:shadowDy="@integer/shadowDY"
        android:shadowRadius="@integer/shadowRadius"
        android:textColor="@color/colorLightGray"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/inputTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="35"
        tools:text="0" />

    <TextView
        android:id="@+id/inputTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_10dp"
        android:background="@color/colorDarkBackgroundMedium"
        android:fontFamily="@font/lucida_calc"
        android:padding="@dimen/padding_10dp"
        android:shadowColor="@color/colorShadowWhite"
        android:shadowDx="@integer/shadowDX"
        android:shadowDy="@integer/shadowDY"
        android:shadowRadius="@integer/shadowRadius"
        android:textColor="@color/colorMediumGray"
        android:textSize="@dimen/inputTextSize"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/key_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/resultTextView"
        app:layout_constraintTop_toBottomOf="@id/resultTextView"
        app:layout_constraintVertical_weight="15"
        tools:text="1234567" />

    <Button
        android:id="@+id/key_1"
        style="@style/calcKeysStyle_digits"
        android:text="@string/key_1"
        app:layout_constraintBottom_toTopOf="@id/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/inputTextView"
        app:layout_constraintTop_toBottomOf="@id/inputTextView"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_2"
        style="@style/calcKeysStyle_digits"
        android:text="@string/key_2"
        app:layout_constraintBottom_toTopOf="@id/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintTop_toTopOf="@id/key_1"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_3"
        style="@style/calcKeysStyle_digits"
        android:text="@string/key_3"
        app:layout_constraintBottom_toTopOf="@id/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_div"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintTop_toTopOf="@id/key_1"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_div"
        style="@style/calcKeysStyle_actions"
        android:text="@string/key_div"
        app:layout_constraintBottom_toTopOf="@id/key_multi"
        app:layout_constraintEnd_toEndOf="@id/inputTextView"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toTopOf="@id/key_1"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_4"
        style="@style/calcKeysStyle_digits"
        android:text="@string/key_4"
        app:layout_constraintBottom_toTopOf="@id/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/inputTextView"
        app:layout_constraintTop_toBottomOf="@id/key_1"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_5"
        style="@style/calcKeysStyle_digits"
        android:text="@string/key_5"
        app:layout_constraintBottom_toTopOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_2"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_6"
        style="@style/calcKeysStyle_digits"
        android:text="@string/key_6"
        app:layout_constraintBottom_toTopOf="@id/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_multi"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_3"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_multi"
        style="@style/calcKeysStyle_actions"
        android:text="@string/key_mult"
        app:layout_constraintBottom_toTopOf="@id/key_dec"
        app:layout_constraintEnd_toEndOf="@id/key_div"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_div"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_7"
        style="@style/calcKeysStyle_digits"
        android:text="@string/key_7"
        app:layout_constraintBottom_toTopOf="@id/key_C"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/inputTextView"
        app:layout_constraintTop_toBottomOf="@id/key_4"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_8"
        style="@style/calcKeysStyle_digits"
        android:text="@string/key_8"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_5"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_9"
        style="@style/calcKeysStyle_digits"
        android:text="@string/key_9"
        app:layout_constraintBottom_toTopOf="@id/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_dec"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_6"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_dec"
        style="@style/calcKeysStyle_actions"
        android:text="@string/key_minus"
        app:layout_constraintBottom_toTopOf="@id/key_sum"
        app:layout_constraintEnd_toEndOf="@id/key_multi"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_multi"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_C"
        style="@style/calcKeysStyle_C_CE"
        android:text="@string/key_clear"
        app:layout_constraintBottom_toBottomOf="@id/key_CE"
        app:layout_constraintEnd_toStartOf="@id/key_0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/inputTextView"
        app:layout_constraintTop_toBottomOf="@id/key_7"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_0"
        style="@style/calcKeysStyle_digits"
        android:text="@string/key_0"
        app:layout_constraintBottom_toTopOf="@id/key_result"
        app:layout_constraintEnd_toStartOf="@id/key_dot"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_C"
        app:layout_constraintTop_toBottomOf="@id/key_8"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_dot"
        style="@style/calcKeysStyle_digits"
        android:text="@string/key_dot"
        app:layout_constraintBottom_toTopOf="@id/key_result"
        app:layout_constraintEnd_toStartOf="@id/key_sum"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_9"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_sum"
        style="@style/calcKeysStyle_actions"
        android:text="@string/key_plus"
        app:layout_constraintBottom_toTopOf="@id/key_result"
        app:layout_constraintEnd_toEndOf="@id/key_dec"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/key_dot"
        app:layout_constraintTop_toBottomOf="@id/key_dec"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_CE"
        style="@style/calcKeysStyle_C_CE"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:text="@string/key_clearAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_result"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="@id/key_C"
        app:layout_constraintTop_toBottomOf="@id/key_C"
        app:layout_constraintVertical_weight="10" />

    <Button
        android:id="@+id/key_result"
        style="@style/calcKeysStyle_Result"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:text="@string/key_eq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/key_sum"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@id/key_CE"
        app:layout_constraintTop_toBottomOf="@id/key_dot"
        app:layout_constraintVertical_weight="10" />

</androidx.constraintlayout.widget.ConstraintLayout>